rust/windows_module/errors_6.txt
    Checking windows_module v0.1.0 (/root/aios/rust/windows_module)
error[E0432]: unresolved import `dynasm::DynasmApi`
  --> windows_module/src/jit/windows_compiler.rs:11:22
   |
11 | ...m, DynasmApi};
   |       ^^^^^^^^^ no `DynasmApi` in the root
   |
   = help: consider importing this trait instead:
           dynasmrt::DynasmApi

error[E0432]: unresolved import `crate::main::windows_degraded_mode`
 --> windows_module/src/main/windows_main.rs:3:18
  |
3 | ...n::windows_degraded_mode::W...
  |       ^^^^^^^^^^^^^^^^^^^^^ could not find `windows_degraded_mode` in `main`

error[E0432]: unresolved import `crate::main::windows_local_failover`
 --> windows_module/src/main/windows_main.rs:4:18
  |
4 | ...n::windows_local_failover::W...
  |       ^^^^^^^^^^^^^^^^^^^^^^ could not find `windows_local_failover` in `main`

error[E0432]: unresolved import `crate::main::windows_local_failover`
 --> windows_module/src/main/windows_support.rs:3:18
  |
3 | ...n::windows_local_failover::W...
  |       ^^^^^^^^^^^^^^^^^^^^^^ could not find `windows_local_failover` in `main`

error[E0425]: cannot find type `Error` in crate `dynasmrt`
   --> windows_module/src/jit/windows_compiler.rs:135:77
    |
135 | ...mrt::Error| JitE...
    |         ^^^^^ not found in `dynasmrt`
    |
help: consider importing one of these items
    |
  3 + use std::error::Error;
    |
  3 + use std::fmt::Error;
    |
  3 + use std::io::Error;
    |
  3 + use core::error::Error;
    |
    = and 13 other candidates
help: if you import `Error`, refer to it directly
    |
135 -         let mut ops = dynasmrt::x64::Assembler::new().map_err(|e: dynasmrt::Error| JitError::CompilationError(e.to_string()))?;
135 +         let mut ops = dynasmrt::x64::Assembler::new().map_err(|e: Error| JitError::CompilationError(e.to_string()))?;
    |

warning: unused import: `DynasmLabelApi`
  --> windows_module/src/jit/windows_compiler.rs:12:16
   |
12 | ...::{DynasmLabelApi};
   |       ^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0599]: no method named `push_i8` found for struct `Assembler<R>` in the current scope
   --> windows_module/src/jit/windows_compiler.rs:137:9
    |
137 |   ...   dynasm!(ops
    |  _______^
138 | | ...       ; .arch...
139 | | ...       ; mov r...
140 | | ...       ; mov r...
141 | | ...       ; add r...
142 | | ...       ; ret
143 | | ...   );
    | |_______^
    |
   ::: /root/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/dynasmrt-0.7.1/src/lib.rs:200:8
    |
200 |   ...fn push_i8(&mu...
    |         ------- the method is available for `Assembler<X64Relocation>` here
    |
    = help: items from traits can only be used if the trait is in scope
    = note: this error originates in the macro `dynasm` (in Nightly builds, run with -Z macro-backtrace for more info)
help: trait `DynasmApi` which provides `push_i8` is implemented but not in scope; perhaps you want to import it
    |
  3 + use dynasmrt::DynasmApi;
    |

Some errors have detailed explanations: E0425, E0432, E0599.
For more information about an error, try `rustc --explain E0425`.
warning: `windows_module` (lib) generated 1 warning
error: could not compile `windows_module` (lib) due to 6 previous errors; 1 warning emitted
